--- a/client/assets/css/index.css
+++ b/client/assets/css/index.css
@@ -19,7 +19,7 @@ body {
   padding: 5px;
 }
 
-#message-container div:nth-child(even) {
+#message-container div:nth-child(odd) {
   background-color: #ccc;
 }
 
